Style : Fix overflow esp_section_1

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ header {
     list-style-type: none;
     padding: 0;
     box-sizing: border-box;
+    margin: 0;
 }
 
 #menu ul li a {
@@ -682,6 +683,7 @@ input#contact_form_button:hover {
         grid-area: 1 / 1 / 2 / 2;
     }
     #esp_section_2 {
+        overflow: visible;
         grid-area: 2 / 1 / 3 / 2;
     }
     #esp_section_4 {
